--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -38,28 +38,98 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    console.log("----------SOLUTION 1----------");
+
+    //RETURN (FILTER) ELEMENTS BY THE FUNCTION CONDITIONS. 
+    const fifyspeople = inventors.filter(inventor => (inventor.year >= 1500 && inventor.year < 1600));
+    console.table(fifyspeople);
+
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    console.log("----------SOLUTION 2----------")
+
+    //RETURNS A NEW ARRAY FROM THE RESULTS OF CALLING FUNCTIONS FOR EVERY ELEMENT
+    const fullNames = inventors.map(inventor => (inventor.first + " " + inventor.last));
+    console.table(fullNames);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    console.log("----------SOLUTION 3----------")
+
+    //SORTS THE ARRAY BY CONDITION
+    const birthdaySort = inventors.sort(function(a, b) {
+      if (a.year > b.year) {
+        return 1;
+      } else {
+        return -1;
+      }
+    })
+
+    console.table(birthdaySort);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    console.log("----------SOLUTION 4----------");
+
+    //CALCULATES A SINGLE VALUE FROM EACH ELEMENTS OF THE ARRAY
+    const totalLived = inventors.reduce(function(total, inventor) {
+      return total + inventor.passed - inventor.year;
+    }, 0);
+
+    console.log("They all lived " + totalLived + " years total");
 
     // 5. Sort the inventors by years lived
+    console.log("----------SOLUTION 5----------");
+
+    const eachLived = inventors.sort(function(a, b) {
+
+      const lastGuy = a.passed - a.year;
+      const nextGuy = b.passed - b.year;
+
+      return lastGuy > nextGuy ? -1 : 1
+      });
+
+    console.table(eachLived);
+    
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
+/*    const category = document.querySelector(".mw-category");
+    const links = Array.from(category.querySelectorAll("a"));
+
+    const de = links 
+                    .map(link => link.textContent)
+                    .filter(link => link.includes("de"));*/
+
+
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    console.log("----------SOLUTION 7----------");
+    const alpha = people.sort((lastOne, nextOne) => {
+      const [aLast, aFirst] = lastOne.split(', ');
+      const [bLast, bFirst] = nextOne.split(', ');
+      return aLast > bLast ? 1 : -1;
+    });
+    console.table(alpha);
+
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
+    console.log("----------SOLUTION 8----------");
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+
+    const calculate = data.reduce(function(obj, item) {
+      if (!obj[item]) {
+        obj[item] = 0;
+      }
+      obj[item]++;
+      return obj;
+    }, {});
+
+    console.log(calculate);
 
   </script>
 </body>
