--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -29,13 +29,27 @@
     // Array.prototype.some() // is at least one person 19 or older?
     // Array.prototype.every() // is everyone 19 or older?
 
+    const isAdult = people.some(person => (2023 - person.year >= 19));
+    console.log(isAdult);
+
+    const allAdult = people.every(person => (2023 - person.year >= 19));
+    console.log(allAdult);
+
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
 
+    const findById = comments.find(comment => comment.id === 823423);
+    console.log(findById);
+
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+
+    const deleteComment = comments.findIndex(comment => comment.id === 823423);
+    delete comments[deleteComment + 1];
+    console.log(comments);
+
 
   </script>
 </body>
